Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83837

URLs doesn't open if xdg-desktop-portal isn't started

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.12.3
    • QPA: X11/XCB
    • None
    • Linux/X11
    • 38337fa9d384baf2e5803414e2652ad87cc06ab7 (qt/qtbase/dev)

      For some reason, snapd doesn't allow dbus activating of xdg-desktop-portal and returns AccessDenied to any request. Qt checks the returned error and if it is not ServiceUnknown, Qt doesn't try to open URL through xdg-open, which encounters into situation that URLs doesn't open until some other app tries to access xdg-desktop-portal.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes